# octai-app

./: .gitignore  Makefile  README.md  dev.sh  install.sh  octai-app.desktop
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: index.css  routeTree.gen.ts
frontend/src/api/: image.ts  mobile.ts  models.ts  oauth.ts  reference-urls.ts  scanner.ts  sessions.ts  skills.ts  tailscale.ts
frontend/src/components/: app-header.tsx  app-sidebar.tsx
frontend/src/hooks/: use-chat-models.ts  use-credentials-page.ts  use-session-history.ts  use-sidebar-channels.ts
frontend/src/i18n/: index.ts
frontend/src/routes/: __root.tsx  config.tsx  history.tsx  loops.tsx  mcp.tsx  schedule.tsx  settings.tsx  teams.tsx  terminal.tsx  workflows.tsx
frontend/src/store/: chat.ts
go-backend/: go.mod  go.sum
go-backend/cmd/octai-app/: main.go
go-backend/config/: config.example.json
go-backend/migrations/: 001_create_organizations.sql  002_create_memberships.sql  003_create_subscriptions.sql  004_create_usage_records.sql  005_create_analytics_events.sql  006_create_marketplace.sql  007_create_audit_logs.sql  008_create_compliance.sql  009_create_knowledge_base.sql  010_create_workflows.sql
go-backend/pkg/: env.go
go-backend/pkg/agent/: automode.go  automode_test.go  context.go  context_budget.go  context_budget_test.go  context_cache_test.go  context_test.go  definition.go  eventbus_test.go  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+443 files in other folders)
